--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Schedy</title>
-    <meta name="description" content="Schedy helps students stay organized: schedule, todos, grades, and Pomodoro focus." />
+    <title>Skedra</title>
+    <meta name="description" content="Skedra helps students stay organized: schedule, todos, grades, and Pomodoro focus." />
     <link rel="stylesheet" href="assets/styles.css" />
   </head>
   <body>
     <div class="wrap">
       <header>
         <div class="brand">
-          <div class="title">Schedy</div>
+          <div class="title">Skedra</div>
           <div class="badge">Study Planner</div>
         </div>
         <nav>
@@ -26,7 +26,7 @@
           <div>
             <h1>Plan. Focus. Stay consistent.</h1>
             <p class="muted">
-              Schedy is a lightweight student planner that brings schedules, todos, grade tracking, and Pomodoro focus into one calm flow.
+              Skedra is a lightweight student planner that brings schedules, todos, grade tracking, and Pomodoro focus into one calm flow.
             </p>
 
             <div class="actions">
@@ -117,7 +117,7 @@
         </div>
 
         <footer>
-          © <span id="year"></span> Schedy
+          © <span id="year"></span> Skedra
         </footer>
       </main>
     </div>
