--- a/privacy/index.html
+++ b/privacy/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Schedy — Privacy Policy</title>
-    <meta name="description" content="Privacy Policy for Schedy." />
+    <title>Skedra — Privacy Policy</title>
+    <meta name="description" content="Privacy Policy for Skedra." />
     <link rel="stylesheet" href="../assets/styles.css" />
   </head>
   <body>
     <div class="wrap">
       <header>
         <div class="brand">
-          <div class="title"><a href="../">Schedy</a></div>
+          <div class="title"><a href="../">Skedra</a></div>
           <div class="badge">Privacy</div>
         </div>
         <nav>
@@ -26,7 +26,7 @@
         <p class="muted">Last updated: 2025-12-29</p>
 
         <p>
-          This Privacy Policy explains how Schedy ("we", "our", "us") collects, uses, and shares information when you use the Schedy app (the "Service").
+          This Privacy Policy explains how Skedra ("we", "our", "us") collects, uses, and shares information when you use the Skedra app (the "Service").
         </p>
 
         <h2>Information We Collect</h2>
