--- a/support/index.html
+++ b/support/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Schedy — Support</title>
-    <meta name="description" content="Support information for Schedy." />
+    <title>Skedra — Support</title>
+    <meta name="description" content="Support information for Skedra." />
     <link rel="stylesheet" href="../assets/styles.css" />
   </head>
   <body>
     <div class="wrap">
       <header>
         <div class="brand">
-          <div class="title"><a href="../">Schedy</a></div>
+          <div class="title"><a href="../">Skedra</a></div>
           <div class="badge">Support</div>
         </div>
         <nav>
@@ -23,7 +23,7 @@
 
       <main class="card">
         <h1>Support</h1>
-        <p class="muted">Need help with Schedy? Reach us anytime.</p>
+        <p class="muted">Need help with Skedra? Reach us anytime.</p>
 
         <h2>Contact</h2>
         <p>
@@ -32,16 +32,16 @@
 
         <h2>Account & Data Deletion</h2>
         <p>
-          If you want to delete your account or request deletion of your data, email us from the email address linked to your Schedy account with:
+          If you want to delete your account or request deletion of your data, email us from the email address linked to your Skedra account with:
         </p>
         <ul>
-          <li>Subject: <strong>Schedy — Delete account</strong></li>
+          <li>Subject: <strong>Skedra — Delete account</strong></li>
           <li>Your user ID (if available) or the email you used to sign in</li>
         </ul>
 
         <h2>Notifications</h2>
         <p class="muted">
-          If you’re not receiving notifications, check iOS Settings → Notifications → Schedy and ensure notifications are enabled.
+          If you’re not receiving notifications, check iOS Settings → Notifications → Skedra and ensure notifications are enabled.
         </p>
 
         <footer>
