--- a/terms/index.html
+++ b/terms/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Schedy — Terms</title>
-    <meta name="description" content="Terms and Conditions for Schedy." />
+    <title>Skedra — Terms</title>
+    <meta name="description" content="Terms and Conditions for Skedra." />
     <link rel="stylesheet" href="../assets/styles.css" />
   </head>
   <body>
     <div class="wrap">
       <header>
         <div class="brand">
-          <div class="title"><a href="../">Schedy</a></div>
+          <div class="title"><a href="../">Skedra</a></div>
           <div class="badge">Terms</div>
         </div>
         <nav>
@@ -26,7 +26,7 @@
         <p class="muted">Last updated: 2025-12-29</p>
 
         <p>
-          By using Schedy, you agree to these Terms. If you do not agree, do not use the Service.
+          By using Skedra, you agree to these Terms. If you do not agree, do not use the Service.
         </p>
 
         <h2>Use of the Service</h2>
@@ -52,7 +52,7 @@
 
         <h2>Limitation of Liability</h2>
         <p>
-          To the maximum extent permitted by law, Schedy is not liable for indirect, incidental, special, consequential, or punitive damages.
+          To the maximum extent permitted by law, Skedra is not liable for indirect, incidental, special, consequential, or punitive damages.
         </p>
 
         <h2>Changes</h2>
