docs: Update legal pages with UGC policy and account deletion instructions

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -23,7 +23,7 @@
 
       <main class="card">
         <h1>Privacy Policy</h1>
-        <p class="muted">Last updated: 2025-12-29</p>
+        <p class="muted">Last updated: 2026-01-09</p>
 
         <p>
           This Privacy Policy explains how Skedra ("we", "our", "us") collects, uses, and shares information when you use the Skedra app (the "Service").
@@ -31,41 +31,38 @@
 
         <h2>Information We Collect</h2>
         <ul>
-          <li><strong>Account information</strong>: email, display name, profile photo (if you sign in).</li>
-          <li><strong>User content</strong>: features you use may store data such as schedules, todos, messages, and social relationships.</li>
-          <li><strong>Diagnostics</strong>: crash reports and performance data (e.g., via Firebase Crashlytics).</li>
-          <li><strong>Usage analytics</strong>: basic usage events to understand how the app is used (e.g., via Firebase Analytics).</li>
-          <li><strong>Push notification tokens</strong>: device/FCM tokens for sending notifications.</li>
+          <li><strong>Account information</strong>: Email address, display name, and profile photo provided during sign-in.</li>
+          <li><strong>User Generated Content (UGC)</strong>: Information you create or share, including your class schedules, tasks (todos), milestones, and messages sent in social features.</li>
+          <li><strong>Social Relationships</strong>: Data about users you follow or who follow you.</li>
+          <li><strong>Diagnostics & Analytics</strong>: Performance data, crash reports, and usage events captured via Firebase to improve app stability and experience.</li>
+          <li><strong>Push tokens</strong>: Device tokens used to deliver reminders and alerts.</li>
         </ul>
 
         <h2>How We Use Information</h2>
         <ul>
-          <li>Provide and improve the Service</li>
-          <li>Enable social and messaging features (if available)</li>
-          <li>Send notifications you opt into</li>
-          <li>Detect and fix bugs and crashes</li>
+          <li>To provide, maintain, and secure the Service.</li>
+          <li>To enable core social features like following friends and messaging.</li>
+          <li>To process and sync your data across devices.</li>
+          <li>To monitor for, and act upon, violations of our Terms of Service.</li>
         </ul>
 
-        <h2>How We Share Information</h2>
+        <h2>Data Sharing & Retention</h2>
         <p>
-          We may share information with service providers that process data on our behalf, such as Firebase (Google) for authentication, database, analytics, crash reporting, and messaging.
-          We do not sell your personal information.
+          We share information with service providers (like Google/Firebase for cloud hosting) to run the app. We do not sell your data. We retain your information as long as your account is active or needed to provide you with the Service.
         </p>
 
-        <h2>Data Storage</h2>
+        <h2>Your Rights & Data Deletion</h2>
         <p>
-          Some data may be stored locally on your device. If you enable sync features, data may be stored and synced using cloud services (e.g., Firebase and/or iCloud, depending on what you enable).
+          You have the right to access, correct, or delete your personal information.
         </p>
-
-        <h2>Your Choices</h2>
         <ul>
-          <li>You can disable notifications in iOS Settings.</li>
-          <li>You can request account/data deletion via the Support page.</li>
+          <li><strong>Account Deletion</strong>: You can delete your account and all associated data directly within the Skedra app settings. Alternatively, you can follow instructions on our <a href="../support/">Support page</a>.</li>
+          <li><strong>Local Data</strong>: Some data is stored on your device and can be removed by uninstalling the app.</li>
         </ul>
 
         <h2>Contact</h2>
         <p>
-          For privacy questions, contact: <a href="mailto:muhammedkilinc@icloud.com">muhammedkilinc@icloud.com</a>
+          For privacy-related inquiries: <a href="mailto:muhammedkilinc@icloud.com">muhammedkilinc@icloud.com</a>
         </p>
       </main>
     </div>
