--- a/terms/index.html
+++ b/terms/index.html
@@ -1,71 +1,87 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Skedra — Terms</title>
-    <meta name="description" content="Terms and Conditions for Skedra." />
-    <link rel="stylesheet" href="../assets/styles.css" />
-  </head>
-  <body>
-    <div class="wrap">
-      <header>
-        <div class="brand">
-          <div class="title"><a href="../">Skedra</a></div>
-          <div class="badge">Terms</div>
-        </div>
-        <nav>
-          <a href="../support/">Support</a>
-          <a href="../privacy/">Privacy</a>
-          <a href="../terms/">Terms</a>
-        </nav>
-      </header>
 
-      <main class="card">
-        <h1>Terms and Conditions</h1>
-        <p class="muted">Last updated: 2025-12-29</p>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Skedra — Terms</title>
+  <meta name="description" content="Terms and Conditions for Skedra." />
+  <link rel="stylesheet" href="../assets/styles.css" />
+</head>
 
-        <p>
-          By using Skedra, you agree to these Terms. If you do not agree, do not use the Service.
-        </p>
+<body>
+  <div class="wrap">
+    <header>
+      <div class="brand">
+        <div class="title"><a href="../">Skedra</a></div>
+        <div class="badge">Terms</div>
+      </div>
+      <nav>
+        <a href="../support/">Support</a>
+        <a href="../privacy/">Privacy</a>
+        <a href="../terms/">Terms</a>
+      </nav>
+    </header>
 
-        <h2>Use of the Service</h2>
-        <ul>
-          <li>You are responsible for your use of the Service and any content you provide.</li>
-          <li>You agree not to misuse the Service (spam, abuse, illegal activity, or attempts to break security).</li>
-        </ul>
+    <main class="card">
+      <h1>Terms and Conditions</h1>
+      <p class="muted">Last updated: 2026-01-09</p>
 
-        <h2>Accounts</h2>
-        <p>
-          Some features require signing in. You are responsible for keeping your account secure.
-        </p>
+      <p>
+        By creating an account or using Skedra, you agree to these Terms. If you do not agree, do not use the Service.
+      </p>
 
-        <h2>Subscriptions</h2>
-        <p>
-          If the Service offers subscriptions, payments and renewals are handled by Apple. You can manage or cancel subscriptions in your Apple ID settings.
-        </p>
+      <h2>1. User Generated Content (UGC) Policy</h2>
+      <p>
+        Skedra includes social features such as following and messaging. You are strictly prohibited from sharing
+        content that is:
+      </p>
+      <ul>
+        <li>Objectionable, abusive, or harassing.</li>
+        <li>Defamatory, obscene, or pornographic.</li>
+        <li>Illegal or promotes illegal acts.</li>
+        <li>Violating any third-party intellectual property or privacy rights.</li>
+      </ul>
+      <p><strong>Reporting and Blocking:</strong> You can report any objectionable content or users, and block any user
+        who violates these terms directly in the app. Skedra acts promptly (within 24 hours) upon receiving reports to
+        remove such content and/or eject users who violate these terms.</p>
 
-        <h2>Disclaimer</h2>
-        <p>
-          The Service is provided “as is” without warranties of any kind. We do not guarantee uninterrupted or error-free operation.
-        </p>
+      <h2>2. Accounts and Responsibilities</h2>
+      <p>
+        You are responsible for your account's security and all activity under your profile. You must provide accurate
+        information when creating an account.
+      </p>
 
-        <h2>Limitation of Liability</h2>
-        <p>
-          To the maximum extent permitted by law, Skedra is not liable for indirect, incidental, special, consequential, or punitive damages.
-        </p>
+      <h2>3. Intellectual Property</h2>
+      <p>
+        All rights to the Skedra app, code, and original content (excluding User Content) remain with Skedra. Your
+        content belongs to you, but you grant us a license to host and display it to other users as part of the
+        Service's social features.
+      </p>
 
-        <h2>Changes</h2>
-        <p>
-          We may update these Terms from time to time. Continued use of the Service after changes means you accept the updated Terms.
-        </p>
+      <h2>4. Subscriptions</h2>
+      <p>
+        Any paid features or subscriptions are processed via Apple App Store. Manage or cancel them in your Apple ID
+        settings.
+      </p>
 
-        <h2>Contact</h2>
-        <p>
-          Questions about these Terms: <a href="mailto:muhammedkilinc@icloud.com">muhammedkilinc@icloud.com</a>
-        </p>
-      </main>
-    </div>
-  </body>
+      <h2>5. Termination</h2>
+      <p>
+        We reserve the right to suspend or terminate accounts that violate our UGC policy or engage in harmful behavior
+        without prior notice.
+      </p>
+
+      <h2>6. Disclaimer</h2>
+      <p>
+        The Service is provided “as is”. We are not liable for any damages resulting from your use of the Service or the
+        interactions between users.
+      </p>
+
+      <h2>Contact</h2>
+      <p>
+        Questions about these Terms: <a href="mailto:muhammedkilinc@icloud.com">muhammedkilinc@icloud.com</a>
+    </main>
+  </div>
+</body>
+
 </html>
-
