--- a/support/index.html
+++ b/support/index.html
@@ -1,54 +1,60 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Skedra — Support</title>
-    <meta name="description" content="Support information for Skedra." />
-    <link rel="stylesheet" href="../assets/styles.css" />
-  </head>
-  <body>
-    <div class="wrap">
-      <header>
-        <div class="brand">
-          <div class="title"><a href="../">Skedra</a></div>
-          <div class="badge">Support</div>
-        </div>
-        <nav>
-          <a href="../support/">Support</a>
-          <a href="../privacy/">Privacy</a>
-          <a href="../terms/">Terms</a>
-        </nav>
-      </header>
 
-      <main class="card">
-        <h1>Support</h1>
-        <p class="muted">Need help with Skedra? Reach us anytime.</p>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Skedra — Support</title>
+  <meta name="description" content="Support information for Skedra." />
+  <link rel="stylesheet" href="../assets/styles.css" />
+</head>
 
-        <h2>Contact</h2>
-        <p>
-          Email: <a href="mailto:muhammedkilinc@icloud.com">muhammedkilinc@icloud.com</a>
-        </p>
+<body>
+  <div class="wrap">
+    <header>
+      <div class="brand">
+        <div class="title"><a href="../">Skedra</a></div>
+        <div class="badge">Support</div>
+      </div>
+      <nav>
+        <a href="../support/">Support</a>
+        <a href="../privacy/">Privacy</a>
+        <a href="../terms/">Terms</a>
+      </nav>
+    </header>
 
-        <h2>Account & Data Deletion</h2>
-        <p>
-          If you want to delete your account or request deletion of your data, email us from the email address linked to your Skedra account with:
-        </p>
-        <ul>
-          <li>Subject: <strong>Skedra — Delete account</strong></li>
-          <li>Your user ID (if available) or the email you used to sign in</li>
-        </ul>
+    <main class="card">
+      <h1>Support</h1>
+      <p class="muted">Need help with Skedra? Reach us anytime.</p>
 
-        <h2>Notifications</h2>
-        <p class="muted">
-          If you’re not receiving notifications, check iOS Settings → Notifications → Skedra and ensure notifications are enabled.
-        </p>
+      <h2>Account & Data Deletion</h2>
+      <p>
+        As per Apple's requirements, you can delete your account and all associated data in two ways:
+      </p>
+      <ol>
+        <li><strong>In-App (Recommended):</strong> Go to Profile Settings -> Account -> Delete Account. This action is
+          immediate and irreversible.</li>
+        <li><strong>Email Request:</strong> Send an email from your registered address to <a
+            href="mailto:muhammedkilinc@icloud.com">muhammedkilinc@icloud.com</a> with the subject "Skedra — Account
+          Deletion Request". We will process your request within 48 hours.</li>
+      </ol>
 
-        <footer>
-          Last updated: 2025-12-29
-        </footer>
-      </main>
-    </div>
-  </body>
+      <h2>General Inquiries</h2>
+      <p>
+        For help with schedules, technical issues, or reporting bad actors: <a
+          href="mailto:muhammedkilinc@icloud.com">muhammedkilinc@icloud.com</a>
+      </p>
+
+      <h2>Troubleshooting Notifications</h2>
+      <p class="muted">
+        Ensure iOS Settings → Notifications → Skedra is allowed.
+      </p>
+
+      <footer>
+        Last updated: 2026-01-09
+      </footer>
+    </main>
+  </div>
+</body>
+
 </html>
-
